force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>경비</label>
    <nameField>
        <displayFormat>EX-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>경비번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>경비</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>