force-app/main/default/objects/Expense__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>경비</relationshipLabel>
    <relationshipName>Expense_Project</relationshipName>
    <type>Lookup</type>
</CustomField>