force-app/main/default/objects/Expense__c/fields/Spending__c.field-meta.xml
<CustomField>
    <fullName>Spending__c</fullName>
    <label>사용금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>