force-app/main/default/objects/Expense__c/fields/UseDate__c.field-meta.xml
<CustomField>
    <fullName>UseDate__c</fullName>
    <label>사용일자</label>
    <type>Date</type>
</CustomField>